syntax = "proto3";
package ink.model;

option csharp_namespace = "Ink.Cs.Model";

import "ink/model/asset.proto";

// Event-driven asset pipeline messages.
// Transported via: RSocket+msgpack, WSS, SSE.
// Contract defined in: docs/asyncapi/ink-asset-events.yaml

// ── Enums ────────────────────────────────────────────────────────

enum InventoryAction {
  INVENTORY_ACTION_UNSPECIFIED = 0;
  EQUIP = 1;
  UNEQUIP = 2;
  ADD = 3;
  REMOVE = 4;
  USE = 5;
  DROP = 6;
}

enum LoadPriority {
  LOAD_PRIORITY_UNSPECIFIED = 0;
  IMMEDIATE = 1;
  PRELOAD = 2;
  LAZY = 3;
}

// ── Messages ─────────────────────────────────────────────────────

message AssetEvent {
  string session_id = 1;
  string event_type = 2;       // equip, unequip, use, spawn, despawn
  AssetRef asset = 3;
  int64 timestamp = 4;
}

message InventoryChangeEvent {
  string session_id = 1;
  string action = 2;           // equip, unequip, add, remove, use, drop
  string emoji = 3;
  AssetRef asset = 4;
  int64 timestamp = 5;
  string item_name = 6;        // human-readable item name
}

message InkTagEvent {
  string session_id = 1;
  repeated string tags = 2;
  string knot = 3;
  int64 timestamp = 4;
  repeated AssetRef resolved_assets = 5;  // assets resolved from tags
}

message AssetLoadRequest {
  string session_id = 1;
  AssetRef asset = 2;
  string priority = 3;         // "IMMEDIATE", "PRELOAD", "LAZY"
  int64 timestamp = 4;
}

message VoiceSynthRequest {
  string session_id = 1;
  string text = 2;
  VoiceRef voice_ref = 3;
  string language = 4;          // redundant with voice_ref.language — kept for compat
  int64 timestamp = 5;
}
